# AoC

./: .clang-format  .gitignore  AoC.Rproj  AoC.code-workspace  CMakeLists.txt  Makefile  README.md  index.Rmd  pos.txt
2015/Task-1/: task1.Rmd
2015/Task-10/: task10.Rmd
2015/Task-11/: pwgen.cpp  task11.Rmd
2015/Task-12/: task12.Rmd
2015/Task-13/: task13.Rmd
2015/Task-14/: task14.Rmd
2015/Task-15/: task15.Rmd
2015/Task-16/: task16.Rmd
2015/Task-17/: task17.Rmd
2015/Task-18/: light_array.cpp  task18.Rmd
2015/Task-19/: grammar.cpp  task19.Rmd
2015/Task-2/: task2.Rmd
2015/Task-20/: houses.cpp  task20.Rmd
2015/Task-21/: task21.Rmd
2015/Task-22/: task22.Rmd  wizard_game.cpp
2015/Task-23/: task23.Rmd
2015/Task-24/: quantum.cpp  task24.Rmd
2015/Task-25/: task25.Rmd
2015/Task-3/: task3.Rmd
2015/Task-4/: task4.Rmd
2015/Task-5/: task5.Rmd
2015/Task-6/: task6.Rmd
2015/Task-7/: task7.Rmd
2015/Task-8/: task8.Rmd
2015/Task-9/: task9.Rmd
2016/Task-1/: task1.Rmd
docs/: 2015_task1.html  2015_task10.html  2015_task11.html  2015_task12.html  2015_task13.html  2015_task14.html  2015_task15.html  2015_task16.html  2015_task17.html  2015_task18.html  2015_task19.html  2015_task2.html  2015_task20.html  2015_task21.html  2015_task22.html  2015_task23.html  2015_task24.html  2015_task25.html  2015_task3.html  2015_task4.html  2015_task5.html  2015_task6.html  2015_task7.html  2015_task8.html  2015_task9.html  2016_task1.html  2016_task10.html  2016_task11.html  2016_task12.html  2016_task13.html  2016_task14.html  2016_task15.html  2016_task16.html  2016_task17.html  2016_task18.html  2016_task19.html  2016_task2.html  2016_task20.html  2016_task21.html  2016_task22.html  (+225 more)
tools/: build_cpp.ps1  build_docs.R
(+271 files in other folders)
